chore: 提交工作区全部累积改动（guides / docs / 根说明）
- guides/backend、guides/frontend：后端与前端知识库大量章节笔记（JDK/Java 核心、Spring、并发、前端框架、SSR 等）
- docs/大模型与深度学习从原理到代码：ML 原理到代码笔记（ch01-ch10）+ 配图
- docs/harness：Agent Harness 深度讲解整合（两篇分工说明）+ 新增第 10 章「生产化纵深：从能跑到跑得稳」（评测/成本/安全/恢复/运维/合规/RL 闭环）
- 根 README.md / AGENTS.md：目录结构与章节计数同步
- 其他：.gitignore 更新、TODO.md 删除、src 少量更新